2007-11-27  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/ruler.py:
	Remove unused _Ruler._re_any_tag.

	* gaupol/__init__.py (re_any_tag):
	Do now allow newlines inside tags. Fixes IndexError with
	MultilineCellRenderer caused by stripping multiline tags.

2007-11-17  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/patterns/Latn-en.common-error.in:
	Remove "l" from the list of consonants in pattern 'Letters "l" starting
	words' to avoid turning "I' ll" eventually into "I'Il".

2007-11-16  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/agents/search.py (on_find_and_replace_activate):
	Connect to search dialog's delete-event and return True to avoid
	destroying the dialog instead of just hiding it.

2007-11-16  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/renderers/multiline.py:
	* gaupol/gtk/renderers/time.py:
	End editing in the case of focus-out-event only if the focus is not
	being shifted to the right-click menu.

2007-11-07  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/encodings.py (detect):
	Handle ValueError from _translate_code. (#10278)

2007-11-05  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/patterns/Latn.common-error.in:
	Change patterns for removing spaces around quotation marks to count
	the quotation marks to remove the correct space in the middle of text,
	instead of only at the beginning or end of text.

2007-11-03  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/__init__.py:
	Bump version number to match branch release 0.12.3.

2007-11-03  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/patterns/Latn.common-error.conf:
	* data/patterns/Latn.common-error.in:
	Add patterns to remove spaces around quotation marks.

2007-10-26  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/agents/preview.py (preview):
	Do not remove output_path if an exception is caught, because the path
	is not available and the file is removed by atexit anyway. (#10203)

2007-10-26  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/dialogs/split.py (_shift_destination):